--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,13 +13,9 @@
     {{ partial "header.html" . }}
     <main>
       <section class="hero">
-        <h1>List & Rent For Free.
-        <br>No Agents.</h1>
-        <p>
-          <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        </p>
+        <h1>List & Rent For Free. No Agents.</h1>
+        <a href="#get-early-access" class="pill pill-large pill-red">Get Early Access</a>
+        <div class="smoor-iphone"></div>
       </section>
       <section id="tenants" class="tenants">
         <header>
