--- a/static/src/scss/abstracts/_variables.scss
+++ b/static/src/scss/abstracts/_variables.scss
@@ -9,10 +9,10 @@ $yellow                         : #fbfb7e;
 
 $pink                           : #f48fb1;
 
-$gray-light                     : #f5f8fa;
-$gray                           : #bfc9db;
-$gray-dark                      : #8f9ebc;
-$gray-darker                    : #5c719a;
+$gray-light                     : rgba(0, 0, 0, 0.12);
+$gray                           : rgba(0, 0, 0, 0.24);
+$gray-dark                      : rgba(0, 0, 0, 0.53);
+$gray-darker                    : rgba(0, 0, 0, 0.7);
 
 // UI
 $ui-seperator-width             : 1px;
