--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
     {{ partial "header.html" . }}
     <main>
       <section class="hero">
-        <h1>List & Rent For Free. No Agents.</h1>
+        <h1>Free lettings for everyone. Forever.</h1>
         <a href="#get-early-access" class="pill pill-large pill-red">Get Early Access</a>
         <div class="smoor-iphone"></div>
       </section>
@@ -25,9 +25,28 @@
         </header>
         <div class="wrapper">
           <p>Everything a tenant needs. For free.</p>
-          <p>
-            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          </p>
+          <ul class="features">
+            <li>
+              <div class="icon icon-house"></div>
+              Find properties
+            </li>
+            <li>
+              <div class="icon icon-clock"></div>
+              Pick viewing times
+            </li>
+            <li>
+              <div class="icon icon-document"></div>
+              Neogtiate offers
+            </li>
+            <li>
+              <div class="icon icon-sign"></div>
+              Sign and manage contracts
+            </li>
+            <li>
+              <div class="icon icon-keys"></div>
+              Move in
+            </li>
+          </ul>
         </div>
       </section>
       <section id="landlords" class="landlords">
@@ -38,9 +57,55 @@
         </header>
         <div class="wrapper">
           <p>Everything a landlord needs. For free.</p>
-          <p>
-            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          </p>
+          <ul class="features">
+            <li>
+              <div class="icon icon-house"></div>
+              List properties
+            </li>
+            <li>
+              <div class="icon icon-search"></div>
+              Find tenants
+            </li>
+            <li>
+              <div class="icon icon-clock"></div>
+              Manage viewings
+            </li>
+            <li>
+              <div class="icon icon-document"></div>
+              Neogtiate offers
+            </li>
+            <li>
+              <div class="icon icon-sign"></div>
+              Sign and manage contracts
+            </li>
+            <li>
+              <div class="icon icon-boxes"></div>
+              Create inventories
+            </li>
+            <li>
+              <div class="icon icon-keys"></div>
+              Move in
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="professionals" class="professionals">
+        <div class="wrapper">
+          <h3>Are you a property professional?</h3>
+          <ul class="features">
+            <li>
+              <div class="icon icon-coin"></div>
+              Earn a residual income
+            </li>
+            <li>
+              <div class="icon icon-chair"></div>
+              Be your own boss
+            </li>
+            <li>
+              <div class="icon icon-compass"></div>
+              Have complete career freedom
+            </li>
+          </ul>
         </div>
       </section>
       <section class="copyright">&copy; Smoor</section>
