--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,5 +2,5 @@
   <a href="/">
     {{ partial "svg/smoor-mark.svg" . }} Smoor
   </a>
-  <a href="#get-early-access" class="pill pill-red">Get Early Access</a>
+  <a href="#get-access" class="pill pill-red">Get Early Access</a>
 </header>
