--- a/static/src/scss/layout/_layout.scss
+++ b/static/src/scss/layout/_layout.scss
@@ -73,7 +73,7 @@ main {
 section {
   position: relative;
   padding-top: 48px;
-  padding-bottom: 48px;
+  padding-bottom: 64px;
   padding-right: 24px;
   padding-left: 24px;
   background-color: $white;
@@ -87,10 +87,12 @@ section {
 
     @include media(">=tablet") {
       @include scut-center-block;
-      max-width: 768px;
+      max-width: 960px;
 
       p {
         text-align: center;
+        padding-left: 144px;
+        padding-right: 144px;
       }
     }
   }
@@ -159,10 +161,6 @@ section {
         @include type-displays;
       }
     }
-  }
-
-  p {
-    padding-right: 45px;
   }
 }
 
@@ -267,6 +265,7 @@ section {
   border: $ui-seperator-width solid $ui-seperator-color;
   border-radius: 8px;
   margin-top: 32px;
+  margin-bottom: 32px;
 
   @include media(">=tablet") {
     border: 0;
@@ -294,7 +293,7 @@ section {
       border: $ui-seperator-width solid $ui-seperator-color;
       display: flex;
       align-items: center;
-      width: 272px;
+      width: 344px;
       height: 96px;
       margin: 8px;
       padding: 0 40px 0 96px;
@@ -358,6 +357,73 @@ section {
 
   &.icon-sign {
     background-image: url($svg-icon-sign);
+  }
+}
+
+// Team
+
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  margin-top: 32px;
+}
+
+.team-member {
+  margin-bottom: 16px;
+
+  img {
+    width: 128px;
+    height: 96px;
+    border-radius: 48px;
+  }
+  h4 {
+    @include type-headline;
+    margin-top: 16px;
+    margin-bottom: 0;
+  }
+}
+
+// Get access
+.get-access {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $red;
+  color: $white;
+  transition: opacity .5s;
+
+  .close-get-access {
+    @include scut-image-replace;
+
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    color: $white;
+    background-image: url($svg-icon-close-white);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    width: 32px;
+    height: 32px;
+  }
+}
+
+.get-access-active {
+  overflow: hidden;
+  .get-access {
+    opacity: 1;
+    z-index: 1000;
   }
 }
 
