--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -72,8 +72,8 @@ main {
 // Sections
 section {
   position: relative;
-  padding-top: 56px;
-  padding-bottom: 60px;
+  padding-top: 48px;
+  padding-bottom: 64px;
   padding-right: 24px;
   padding-left: 24px;
   background-color: $white;
@@ -84,8 +84,16 @@ section {
 
 
   > .wrapper {
+
     @include media(">=tablet") {
-      max-width: 768px;
+      @include scut-center-block;
+      max-width: 960px;
+
+      p {
+        text-align: center;
+        padding-left: 144px;
+        padding-right: 144px;
+      }
     }
   }
 
@@ -93,7 +101,7 @@ section {
     position: absolute;
     display: flex;
     top: 0;
-    height: 56px;
+    height: 48px;
     width: 100%;
     margin-right: -24px;
     margin-left: -24px;
@@ -114,7 +122,7 @@ section {
       padding-left: 24px;
       cursor: default;
       color: $black;
-      line-height: 56px;
+      line-height: 48px;
       text-decoration: none;
       transition: background-color .25s, color .25s;
 
@@ -154,16 +162,13 @@ section {
       }
     }
   }
-
-  p {
-    padding-right: 45px;
-  }
 }
 
 // Section Hero
 .hero {
   z-index: 500;
   box-sizing: border-box;
+  padding-bottom: 112px;
 
   @include media(">=desktop") {
   }
@@ -179,22 +184,28 @@ section {
     margin-top: 44px;
 
     @include media(">=tablet") {
-      @include type-displaylll;
       text-align: center;
       margin-top: 32px;
       margin-bottom: 24px;
     }
 
+    @include media(">=desktop") {
+      @include type-displaylll;
+    }
+
 
     @include media("<tablet") {
-      max-width: 300px;
       margin-bottom: 0;
     }
   }
 
   .pill {
     @include scut-center-transform(x);
-    margin-top: 8px;
+    margin-top: 24px;
+
+    @include media(">=tablet") {
+      margin-top: 8px;
+    }
   }
 
   .smoor-iphone {
@@ -219,10 +230,9 @@ section {
 .tenants {
   z-index: 600;
   padding-top: .1px;
-  padding-bottom: 0;
 
   > header {
-    transform: translateY(-56px);
+    transform: translateY(-48px);
 
     @include media("<tablet") {
       transform: translateY(-44px);
@@ -230,10 +240,191 @@ section {
   }
 }
 
-// Section Ideas
+// Section Landlords
 .landlords {
   z-index: 700;
-  padding-bottom: 0;
+  border-bottom: $ui-seperator-width solid $ui-seperator-color;
+}
+
+// Section Professionals
+.professionals {
+  z-index: 800;
+  padding-top: 16px;
+  border-bottom: $ui-seperator-width solid $ui-seperator-color;
+
+  h3 {
+    text-align: center;
+  }
+}
+
+// Features
+
+.features {
+  @include scut-list-unstyled;
+
+  border: $ui-seperator-width solid $ui-seperator-color;
+  border-radius: 8px;
+  margin-top: 32px;
+  margin-bottom: 32px;
+
+  @include media(">=tablet") {
+    border: 0;
+    border-radius: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  li {
+    position: relative;
+    border-bottom: $ui-seperator-width solid $ui-seperator-color;
+    padding: 12px 16px 12px 64px;
+
+    @include media("<tablet") {
+      &:last-child {
+        border: 0;
+      }
+    }
+
+    @include media(">=tablet") {
+      box-sizing: border-box;
+      border-radius: 8px;
+      border: $ui-seperator-width solid $ui-seperator-color;
+      display: flex;
+      align-items: center;
+      width: 344px;
+      height: 96px;
+      margin: 8px;
+      padding: 0 40px 0 96px;
+    }
+  }
+}
+
+.icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 48px;
+  width: 48px;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  @include media(">=tablet") {
+    height: 96px;
+    width: 96px;
+  }
+
+  &.icon-boxes {
+    background-image: url($svg-icon-boxes);
+  }
+
+  &.icon-chair {
+    background-image: url($svg-icon-chair);
+  }
+
+  &.icon-clock {
+    background-image: url($svg-icon-clock);
+  }
+
+  &.icon-coin {
+    background-image: url($svg-icon-coin);
+  }
+
+  &.icon-compass {
+    background-image: url($svg-icon-compass);
+  }
+
+  &.icon-document {
+    background-image: url($svg-icon-document);
+  }
+
+  &.icon-house {
+    background-image: url($svg-icon-house);
+  }
+
+  &.icon-keys {
+    background-image: url($svg-icon-keys);
+  }
+
+  &.icon-mail {
+    background-image: url($svg-icon-mail);
+  }
+
+  &.icon-search {
+    background-image: url($svg-icon-search);
+  }
+
+  &.icon-sign {
+    background-image: url($svg-icon-sign);
+  }
+}
+
+// Team
+
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  margin-top: 32px;
+}
+
+.team-member {
+  margin-bottom: 16px;
+
+  img {
+    width: 128px;
+    height: 96px;
+    border-radius: 48px;
+  }
+  h4 {
+    @include type-headline;
+    margin-top: 16px;
+    margin-bottom: 0;
+  }
+}
+
+// Get access
+.get-access {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $red;
+  color: $white;
+  transition: opacity .5s;
+
+  .close-get-access {
+    @include scut-image-replace;
+
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    color: $white;
+    background-image: url($svg-icon-close-white);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    width: 32px;
+    height: 32px;
+  }
+}
+
+.get-access-active {
+  overflow: hidden;
+  .get-access {
+    opacity: 1;
+    z-index: 1000;
+  }
 }
 
 // Copyright
