--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,11 @@
       <section class="hero">
         <h1>Free lettings for everyone. Forever.</h1>
         <a href="#get-access" class="pill pill-large pill-red">Get Early Access</a>
-        <div class="smoor-iphone"></div>
+        <div class="smoor-iphone">
+          <div class="hero-people hero-people-tenant"></div>
+          <div class="hero-people hero-people-landlord"></div>
+          <div class="hero-people hero-people-professional"></div>
+        </div>
       </section>
       <section id="tenants" class="tenants">
         <header>
