--- a/static/src/scss/main.scss
+++ b/static/src/scss/main.scss
@@ -2,7 +2,7 @@
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
 
-@import 'abstracts/svg-data';
+@import 'abstracts/image-data';
 
 @import 'vendors/normalize';
 @import 'vendors/scut';
