--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,6 +16,11 @@
         <h1>Free lettings for everyone. Forever.</h1>
         <a href="#get-access" class="pill pill-large pill-red">Get Early Access</a>
         <div class="smoor-iphone">
+          <div class="hero-screens">
+            <img src="/img/hero_screen1.png" alt="screenshot 1">
+            <img src="/img/hero_screen2.png" alt="screenshot 2">
+            <img src="/img/hero_screen3.png" alt="screenshot 3">
+          </div>
           <div class="hero-people hero-people-tenant"></div>
           <div class="hero-people hero-people-landlord"></div>
           <div class="hero-people hero-people-professional"></div>
