--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,6 +20,8 @@
             <img src="/img/hero_screen1.png" alt="screenshot 1">
             <img src="/img/hero_screen2.png" alt="screenshot 2">
             <img src="/img/hero_screen3.png" alt="screenshot 3">
+            <img src="/img/hero_screen4.png" alt="screenshot 4">
+            <img src="/img/hero_screen5.png" alt="screenshot 5">
           </div>
           <div class="hero-people hero-people-tenant"></div>
           <div class="hero-people hero-people-landlord"></div>
