--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -6,6 +6,7 @@
   padding         : 6px 12px;
   text-decoration : none;
   border-radius   : 8px;
+  border: 0;
 
   transition      : background-color .25s;
 }
