added dropdown and smoor id for mailchimp

--- a/layouts/partials/get-access.html
+++ b/layouts/partials/get-access.html
@@ -3,9 +3,17 @@
   <p>We’ll let you know when we launch.</p>
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
-    <form action="//aentan.us7.list-manage.com/subscribe/post?u=f17564fb89b066d6eb2debfb6&amp;id=3908b5c716" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <form action="//smoorapp.us16.list-manage.com/subscribe/post?u=105667f17433ae841128b15cd&amp;id=e4f4064266" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div class="mc-field-group">
         <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email address">
+      </div>
+      <div class="mc-field-group">
+        <select name="group[427]" class="REQ_CSS" id="mce-group[427]">
+          <option value="">I am a…</option>
+          <option value="1">Tenant</option>
+          <option value="2">Landlord</option>
+          <option value="4">Property Professional</option>
+        </select>
       </div>
       <div id="mce-responses" class="clear">
         <div class="response" id="mce-error-response" style="display:none"></div>
@@ -26,6 +34,10 @@
       window.ftypes = new Array();
       fnames[0]='EMAIL';
       ftypes[0]='email';
+      fnames[1]='FNAME';
+      ftypes[1]='text';
+      fnames[2]='LNAME';
+      ftypes[2]='text';
     }(jQuery));
     var $mcj = jQuery.noConflict(true);
   </script>
