--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,8 +14,13 @@
     <main>
       <section class="hero">
         <h1>Free lettings for everyone. Forever.</h1>
-        <a href="#get-access" class="pill pill-large pill-red">Get Early Access</a>
-        <div class="smoor-iphone">
+        <div class="discover"></div>
+        <div class="doodle doodle-window"></div>
+        <div class="doodle doodle-lamp"></div>
+        <div class="doodle doodle-picture"></div>
+        <div class="doodle doodle-stool"></div>
+        <div class="doodle doodle-shelf"></div>
+        <!-- <div class="smoor-iphone">
           <div class="hero-screens">
             <img src="/img/hero_screen1.png" alt="screenshot 1">
             <img src="/img/hero_screen2.png" alt="screenshot 2">
@@ -26,40 +31,15 @@
           <div class="hero-people hero-people-tenant"></div>
           <div class="hero-people hero-people-landlord"></div>
           <div class="hero-people hero-people-professional"></div>
+        </div> -->
+      </section>
+      <section id="summary" class="summary">
+        <div class="wrapper">
+          <p class="lead">Lettings and renting property made easy, safe and free.</p>
+          <p>List, rent, make offers, sign the contract and move in.</p>
+          <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
         </div>
       </section>
-      <section id="tenants" class="tenants">
-        <header>
-          <h2>
-            <a href="#tenants">Tenants</a>
-          </h2>
-        </header>
-        <div class="wrapper">
-          <p class="lead">Everything a tenant needs. For free.</p>
-          <ul class="features">
-            <li>
-              <div class="icon icon-house"></div>
-              Find properties
-            </li>
-            <li>
-              <div class="icon icon-clock"></div>
-              Pick viewing times
-            </li>
-            <li>
-              <div class="icon icon-document"></div>
-              Neogtiate offers
-            </li>
-            <li>
-              <div class="icon icon-sign"></div>
-              Sign and manage contracts
-            </li>
-            <li>
-              <div class="icon icon-keys"></div>
-              Move in
-            </li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        </div>
       </section>
       <section id="landlords" class="landlords">
         <header>
@@ -68,7 +48,7 @@
           </h2>
         </header>
         <div class="wrapper">
-          <p class="lead">Everything a landlord needs. For free.</p>
+          <p class="lead">Landlords, everything you need in one place.</p>
           <ul class="features">
             <li>
               <div class="icon icon-house"></div>
@@ -100,6 +80,39 @@
             </li>
           </ul>
           <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nemo enim ipsam voluptatem.</p>
+        </div>
+      </section>
+      <section id="tenants" class="tenants">
+        <header>
+          <h2>
+            <a href="#tenants">Tenants</a>
+          </h2>
+        </header>
+        <div class="wrapper">
+          <p class="lead">Tenants, find the perfect place to live without the headahes and fees.</p>
+          <ul class="features">
+            <li>
+              <div class="icon icon-house"></div>
+              Find properties
+            </li>
+            <li>
+              <div class="icon icon-clock"></div>
+              Pick viewing times
+            </li>
+            <li>
+              <div class="icon icon-document"></div>
+              Neogtiate offers
+            </li>
+            <li>
+              <div class="icon icon-sign"></div>
+              Sign and manage contracts
+            </li>
+            <li>
+              <div class="icon icon-keys"></div>
+              Move in
+            </li>
+          </ul>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
       </section>
       <section id="professionals" class="professionals">
