--- a/static/src/scss/abstracts/_variables.scss
+++ b/static/src/scss/abstracts/_variables.scss
@@ -92,7 +92,7 @@ $type-caption2-letter-spacing   : 0;
 
 // Media Query
 
-$breakpoints                    : (phone: 374px, tablet: 767px, desktop: 1023px);
+$breakpoints                    : (phone: 375px, tablet: 768px, desktop: 1024px, hd: 1366px);
 
 $media-expressions              : (
                                     'screen': 'screen',
