--- a/static/src/scss/layout/_layout.scss
+++ b/static/src/scss/layout/_layout.scss
@@ -199,6 +199,10 @@ section {
     background-size: 1440px 604.5px;
   }
 
+  @include media(">=hd") {
+    background-size: contain;
+  }
+
   h1 {
     @include type-displayl;
 
