--- a/static/src/scss/layout/_layout.scss
+++ b/static/src/scss/layout/_layout.scss
@@ -105,6 +105,7 @@ section {
     width: 100%;
     margin-right: -24px;
     margin-left: -24px;
+    background-color: $white;
     border-top: $ui-seperator-width solid $ui-seperator-color;
     transition: border .25s, top .25s;
     align-items: center;
@@ -170,6 +171,7 @@ section {
   z-index: 500;
   box-sizing: border-box;
   height: calc(100% - 72px);
+  max-height: 768px;
   position: relative;
   background-color: #f7f9f8;
   background-position: center bottom;
