--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,8 +24,8 @@
       <section id="summary" class="summary">
         <div class="wrapper wrapper-flex">
           <div class="left">
-            <p class="lead">Lettings and renting property made easy, safe and free.</p>
-            <p>List, rent, make offers, sign the contract and move in.</p>
+            <h2>Lettings and renting property made easy, safe and free.</h2>
+            <p class="lead">List, rent, make offers, sign the contract and move in.</p>
             <p><a href="#get-access" class="pill pill-large pill-red">Get Early Access</a></p>
           </div>
           <div class="right">
@@ -49,7 +49,7 @@
           </h2>
         </header>
         <div class="wrapper">
-          <p class="lead">Landlords, everything you need in one place.</p>
+          <h2>Landlords, everything you need in one place.</h2>
           <ul class="features">
             <li>
               <div class="icon icon-house"></div>
@@ -80,7 +80,6 @@
               Organize move-ins and outs
             </li>
           </ul>
-          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nemo enim ipsam voluptatem.</p>
         </div>
       </section>
       <section id="tenants" class="tenants">
@@ -90,7 +89,7 @@
           </h2>
         </header>
         <div class="wrapper">
-          <p class="lead">Tenants, find the perfect place to live without the headahes and fees.</p>
+          <h2>Tenants, find the perfect place to live without the headahes and fees.</h2>
           <ul class="features">
             <li>
               <div class="icon icon-house"></div>
@@ -113,7 +112,6 @@
               Move in
             </li>
           </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
       </section>
       <section id="professionals" class="professionals">
@@ -137,27 +135,31 @@
       </section>
       <section id="professionals" class="professionals">
         <div class="wrapper">
-          <h3>Meet the Team</h3>
+          <h3>The Team</h3>
           <div class="team-list">
             <figure class="team-member">
               <img src="/img/team_imran.jpg" alt="Imran Ahmad">
               <h4>Imran Khan</h4>
-              Co-founder
+              Co-founder<br>
+              <span class="text-gray">Brand & Marketing</span>
             </figure>
             <figure class="team-member">
               <img src="/img/team_aneel.jpg" alt="Imran Ahmad">
               <h4>Aneel Yasim</h4>
-              Co-founder
+              Co-founder<br>
+              <span class="text-gray">Management & Support</span>
             </figure>
             <figure class="team-member">
               <img src="/img/team_umar.jpg" alt="Imran Ahmad">
               <h4>Umar Akram</h4>
-              CPO
+              Co-founder<br>
+              <span class="text-gray">Product & Growth</span>
             </figure>
             <figure class="team-member">
               <img src="/img/team_khayam.jpg" alt="Imran Ahmad">
               <h4>Khayam Khan</h4>
-              Creative
+              Co-founder<br>
+              <span class="text-gray">UX & UI</span>
             </figure>
           </div>
         </div>
