--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="hero-header">
   <a href="/">
-    {{ partial "svg/smoor-mark.svg" . }} Smoor
+    {{ partial "svg/smoor-mark.svg" . }} <!-- Smoor -->
   </a>
   <a href="#get-access" class="pill pill-red">Get Early Access</a>
 </header>
